// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[STORE] - Details actions Disable loading action 1`] = `
Object {
  "payload": Object {
    "id": "events",
    "loading": false,
  },
  "type": "SET_DETAILS_LOADING",
}
`;

exports[`[STORE] - Details actions Enable loading action 1`] = `
Object {
  "payload": Object {
    "id": "events",
    "loading": true,
  },
  "type": "SET_DETAILS_LOADING",
}
`;

exports[`[STORE] - Details actions Set details actions 1`] = `
Object {
  "payload": Object {
    "details": Object {
      "id": 20,
      "title": "Modern Tribe",
    },
    "id": "events",
  },
  "type": "SET_DETAILS",
}
`;

exports[`[STORE] - Details actions Set post type action 1`] = `
Object {
  "payload": Object {
    "id": "events",
    "postType": "tribe_events",
  },
  "type": "SET_DETAILS_POST_TYPE",
}
`;
